# Standoff2-Dumper

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
Core/: Core.cpp  Core.h  LimeWare.cpp  LimeWare.h
Dumper/: Dumper.cpp  Dumper.h
Injection/: Injection.cpp  Injection.h
KittyMemoryEx/: KittyAsm.cpp  KittyAsm.hpp  KittyIOFile.cpp  KittyIOFile.hpp  KittyMemOp.cpp  KittyMemOp.hpp  KittyMemoryEx.cpp  KittyMemoryEx.hpp  KittyMemoryMgr.cpp  KittyMemoryMgr.hpp  KittyPerfEvent.cpp  KittyPerfEvent.hpp  KittyPtrValidator.cpp  KittyPtrValidator.hpp  KittyScanner.cpp  KittyScanner.hpp  KittyTrace.cpp  KittyTrace.hpp  KittyUtils.cpp  KittyUtils.hpp  MemoryBackup.cpp  MemoryBackup.hpp  MemoryPatch.cpp  MemoryPatch.hpp
Utils/: Assembler.h  Il2CppApi.cpp  Il2CppApi.h  Log.cpp  Log.h  Memory.cpp  Memory.h
